--- a/SAO-EP/CanvasManifest.json
+++ b/SAO-EP/CanvasManifest.json
@@ -112,11 +112,11 @@
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "e390e5fb-5671-4230-b5f5-5cf75afc7fd1",
-    "Id": "7c8c0ae7-4b6d-4a63-9063-857502062927",
+    "Id": "ed440894-d3c4-4bdb-b40e-0582c0b844f4",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "",
     "ManualOfflineProfileId": "",
-    "Name": "SAOEP_Finals",
+    "Name": "SAOEP_Finals.msapp",
     "OriginatingVersion": "1.296",
     "ParserErrorCount": 1,
     "ShowStatusBar": false
