--- a/SAO-EP/Src/APF_Approvals.fx.yaml
+++ b/SAO-EP/Src/APF_Approvals.fx.yaml
@@ -1,4 +1,4 @@
-"ApprovalDraft As screen.'autoLayout_Approval_ver1.0'":
+"APF_Approvals As screen.'autoLayout_Approval_ver1.0'":
     OnVisible: =
 
     ScreenContainer3 As groupContainer.verticalAutoLayoutContainer:
@@ -13,36 +13,9 @@
         PaddingRight: =16
         PaddingTop: =16
         Width: =Parent.Width
+        Y: |
+            =60
         ZIndex: =1
-
-        HeaderContainer2 As groupContainer.horizontalAutoLayoutContainer:
-            Fill: =RGBA(255, 255, 255, 1)
-            FillPortions: =0
-            Height: =75
-            LayoutMinHeight: =100
-            LayoutMinWidth: =250
-            LayoutMode: =LayoutMode.Auto
-            RadiusBottomLeft: =8
-            RadiusBottomRight: =8
-            RadiusTopLeft: =8
-            RadiusTopRight: =8
-            ZIndex: =2
-
-            Header1 As Header:
-                BasePaletteColor: =
-                DisplayMode: =DisplayMode.Edit
-                Height: =75
-                LayoutMinHeight: =75
-                LayoutMinWidth: =Parent.Width
-                OnSelectLogo: =false
-                Title: ="Header"
-                UserEmail: =User().Email
-                UserImage: =User().Image
-                UserName: =User().FullName
-                Width: =Parent.Width
-                X: =0
-                Y: =0
-                ZIndex: =3
 
         MainContainer2 As groupContainer.horizontalAutoLayoutContainer:
             Fill: =RGBA(245, 245, 245, 1)
@@ -200,7 +173,7 @@
                 RadiusBottomRight: =8
                 RadiusTopLeft: =8
                 RadiusTopRight: =8
-                Visible: =If(ApprovalDraft.Size = ScreenSize.Small, false, true)
+                Visible: =If(APF_Approvals.Size = ScreenSize.Small, false, true)
                 ZIndex: =9
 
                 ReviewersText1 As Text:
@@ -228,7 +201,7 @@
                     LoadingSpinner: =LoadingSpinner.Data
                     TabIndex: =0
                     TemplatePadding: =0
-                    TemplateSize: =If(ApprovalDraft.Size = ScreenSize.Small, 80, 140)
+                    TemplateSize: =If(APF_Approvals.Size = ScreenSize.Small, 80, 140)
                     ZIndex: =11
 
                     AdviserApprovalStatus As Badge:
@@ -288,4 +261,8 @@
                         X: =100
                         Y: =72
                         ZIndex: =18
+
+    HP_TSKBR_2 As TSKBR:
+        NavigationItems: =gblNavItems
+        ZIndex: =2
 
