--- a/SAO-EP/Src/APF_Approvals.fx.yaml
+++ b/SAO-EP/Src/APF_Approvals.fx.yaml
@@ -102,40 +102,41 @@
                         Size: =20
                         Text: =ThisItem.'Activity Title'
                         Width: =400
-                        X: =7
+                        X: =45
                         Y: =21
                         ZIndex: =7
 
                     "'Adviser Approval Status' As Text":
                         Align: ='TextCanvas.Align'.Center
                         DisplayMode: =DisplayMode.Edit
-                        Height: =32
+                        Height: =26
                         Text: |-
                             =// Text(LookUp('Approvals History', 'APF ID'.Value = Text(ThisItem.ID)).'Adviser Approval'.Value)
                             Last(Filter('Approvals History', 'APF ID'.Value = Text(ThisItem.ID))).'Adviser Approval'.Value
-                        Width: =116
-                        X: =418
-                        Y: =30
+                        Width: =135
+                        X: =447
+                        Y: =48
                         ZIndex: =8
 
                     "'SAO Head Approval Status' As Text":
                         Align: ='TextCanvas.Align'.Center
                         DisplayMode: =DisplayMode.Edit
-                        Height: =32
+                        Height: =31
                         Text: =Last(Filter('Approvals History', 'APF ID'.Value = Text(ThisItem.ID))).'SAO Head Approval'.Value
-                        Width: =116
-                        X: =662
-                        Y: =28
+                        Width: =141
+                        X: =655
+                        Y: =43
                         ZIndex: =9
 
                     TextCanvas5 As Text:
+                        Align: ='TextCanvas.Align'.Center
                         DisplayMode: =DisplayMode.Edit
                         Height: =25
                         Text: ="SAO Head Approval"
                         Weight: ='TextCanvas.Weight'.Bold
                         Width: =141
-                        X: =650
-                        Y: =0
+                        X: =655
+                        Y: =18
                         ZIndex: =11
 
                     TextCanvas4 As Text:
@@ -147,8 +148,8 @@
                         Weight: ='TextCanvas.Weight'.Bold
                         Width: =135
                         Wrap: =false
-                        X: =409
-                        Y: =0
+                        X: =447
+                        Y: =18
                         ZIndex: =12
 
                     TextCanvas2 As Text:
@@ -156,8 +157,8 @@
                         Height: =32
                         Text: =ThisItem.ID
                         Width: =96
-                        X: =7
-                        Y: =0
+                        X: =4
+                        Y: =34
                         ZIndex: =13
 
             SidebarContainer3 As groupContainer.verticalAutoLayoutContainer:
