--- a/SAO-EP/Src/APF_Approvals.fx.yaml
+++ b/SAO-EP/Src/APF_Approvals.fx.yaml
@@ -184,6 +184,7 @@
                         OnSelect: |
                             =ChangeApprovalStatus.Run(ApprovalsAPFGallery.Selected.ID, CurrentUser.userRoles.Id, "Approved",{text_1:" "});
                         Text: ="Approve"
+                        Visible: =If(CurrentUser.userRoles.Id<3,true,false)
                         Width: =66
                         X: =47
                         Y: =51
