--- a/SAO-EP/Src/APF_Approvals.fx.yaml
+++ b/SAO-EP/Src/APF_Approvals.fx.yaml
@@ -68,7 +68,11 @@
 
                 "ApprovalsAPFGallery As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
                     DelayItemLoading: =true
-                    Items: =Filter('APF Uploads','Name of Lead Org' = CurrentUserOrg.orgAcronym)
+                    Items: |-
+                        =If(CurrentUser.userRoles.Id >1,
+                            Filter('APF Uploads','Name of Lead Org' = CurrentUserOrg.orgAcronym),
+                            'APF Uploads'
+                        )
                     Layout: =Layout.Vertical
                     LayoutMinHeight: =287
                     LayoutMinWidth: =320
